--- a/Resources/translations/messages.en.yml
+++ b/Resources/translations/messages.en.yml
@@ -9,3 +9,15 @@ node:
     edit_item_settings: Edit item settings
     website_sitemap: Website sitemap
     choose_site: Choose site
+    form:
+        slug: Nice URL
+        title: Menu name
+        visible: Show in menu
+        metaTitle: Meta title
+        metaDescription: Meta description
+        metaKeywords: Meta keywords
+        ogTitle: OG title
+        ogDescription: OG description
+        ogImage: OG image
+        ogImage_empty_value: Choose image
+        link: Direct url
