--- a/Resources/translations/messages.en.yml
+++ b/Resources/translations/messages.en.yml
@@ -5,7 +5,7 @@ node:
     click_on_left_side_to_edit: Click on the left side to edit nodeno_content_attached: no content attached
     delete_confirm: Are you sure you want to delete?
     create_new_item: Create new item
-    attach_content: Dodaj zawartość
+    attach_content: Attach Content
     edit_item_settings: Edit item settings
     website_sitemap: Website sitemap
     choose_site: Choose site
